Added markdown for the ipynb file

--- a/HW1/hw_1.ipynb
+++ b/HW1/hw_1.ipynb
@@ -1,18 +1,36 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "a4470742",
+   "cell_type": "markdown",
+   "id": "d332d650",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd"
+    "### Visual Analytics\n",
+    "#### Homework#1 - Data Manipulation - Insurance Portfolio [Group Assignment]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
+   "id": "6f15dd1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import statments\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98788453",
+   "metadata": {},
+   "source": [
+    "#### 1. Create a pandas data frame, df1, using the data in the ‘example_portfolio.csv’ file. Make sure that 'PolicyNo' is the index of this dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "e18f5515",
    "metadata": {},
    "outputs": [
@@ -456,7 +474,7 @@
        "[4964 rows x 68 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,8 +485,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a8c1e81",
+   "metadata": {},
+   "source": [
+    "2. Display the first 7 rows in the data frame."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "c918c1d5",
    "metadata": {},
    "outputs": [
@@ -546,6 +572,22 @@
    "source": [
     "print(df1.head(n=7))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11f06040",
+   "metadata": {},
+   "source": [
+    "## 3.  Display the number of entries and the data types of all the fields."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db321165",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
