Added markdown for the ipynb file

--- a/HW1/hw_1.ipynb
+++ b/HW1/hw_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d332d650",
+   "id": "1814f093",
    "metadata": {},
    "source": [
     "### Visual Analytics\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6f15dd1d",
+   "id": "5289ec13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98788453",
+   "id": "28911b7c",
    "metadata": {},
    "source": [
     "#### 1. Create a pandas data frame, df1, using the data in the ‘example_portfolio.csv’ file. Make sure that 'PolicyNo' is the index of this dataframe."
@@ -486,10 +486,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a8c1e81",
+   "id": "c5a8f07d",
    "metadata": {},
    "source": [
-    "2. Display the first 7 rows in the data frame."
+    "#### 2. Display the first 7 rows in the data frame."
    ]
   },
   {
@@ -575,16 +575,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11f06040",
+   "id": "a79f9a7f",
    "metadata": {},
    "source": [
-    "## 3.  Display the number of entries and the data types of all the fields."
+    "#### 3.  Display the number of entries and the data types of all the fields."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db321165",
+   "id": "b161f8e2",
    "metadata": {},
    "outputs": [],
    "source": []
